# arcade

./: .gitignore  com.github.alainm23.arcade.json  meson.build
build-aux/flatpak/: com.github.alainm23.arcade.json
build-aux/flatpak/.flatpak-builder/cache/refs/heads/x86_64-com.github.alainm23.arcade.json/: build-libevdev  build-manette  build-retro-gtk  init
build-aux/flatpak/.flatpak-builder/checksums/: x86_64-com.github.alainm23.arcade.json
build-aux/flatpak/.flatpak-builder/git/https_github.com_alainm23_arcade.git/: FETCH_HEAD  config  shallow
build-aux/flatpak/.flatpak-builder/git/https_gitlab.freedesktop.org_libevdev_libevdev.git/: FETCH_HEAD  config  shallow
build-aux/flatpak/.flatpak-builder/git/https_gitlab.gnome.org_GNOME_retro-gtk.git/: FETCH_HEAD  config  shallow
build-aux/flatpak/.flatpak-builder/git/https_gitlab.gnome.org_aplazas_libmanette.git/: FETCH_HEAD  config  shallow
build-aux/flatpak/repo/: metadata
build-aux/flatpak/repo/files/: manifest.json
build-aux/flatpak/repo/files/include/libmanette/: manette-version.h
build-aux/flatpak/repo/files/lib/: libevdev.la  libevdev.so.2.3.0  libgranite.so.5.3.0  libretro-gtk-0.14.so.0
build-aux/flatpak/repo/files/lib/girepository-1.0/: Retro-0.14.typelib
build-aux/flatpak/repo/files/lib/graphviz/: libgvplugin_pango.so.6.0.0
build-aux/flatpak/repo/files/lib/pkgconfig/: granite.pc  manette-0.2.pc
build-aux/flatpak/repo/files/share/gir-1.0/: Manette-0.2.gir  Retro-0.14.gir
build-aux/flatpak/repo/files/share/metainfo/: granite.appdata.xml
src/: Application.vala
(+11 files in other folders)
